added beta distribution

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -13,6 +13,37 @@
    "source": [
     "####  You use the beta distribution to estimate the probability of an event for which you’ve already observed a number of trials and the number of successful outcomes. For example, you would use it to estimate the probability of flipping a heads when so far you have observed 100 tosses of a coin and 40 of those were heads."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "H1 Is 0.016025366094254444\n",
+      "H2 Is 0.13047093903185558\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.stats import binom\n",
+    "\n",
+    "h1 = binom.pmf(k=14, n=41, p=1/2)\n",
+    "h2 = binom.pmf(k=14, n=41, p=14/41)\n",
+    "\n",
+    "print(f\"H1 Is {h1}\")\n",
+    "print(f\"H2 Is {h2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -22,7 +53,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
