added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -48,7 +48,11 @@
     "\n",
     "#### We define the beta distribution with a probability density function (PDF), which is very similar to the probability mass function we use in the binomial distribution, but is defined for continuous values. Here is the formula for the PDF of the beta distribution:\n",
     "\n",
-    "\n"
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/beta-pdf.jpg)\n",
+    "\n",
+    "- p Represents the probability of an event. This corresponds to our different hypotheses for the possible probabilities for our black box.\n",
+    "- α Represents how many times we observe an event we care about, such as getting two quarters from the box.\n",
+    "- β Represents how many times the event we care about didn’t happen. For our example, this is the number of times that the black box ate the quarter.\n"
    ]
   },
   {
