added new pdf function

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -52,7 +52,9 @@
     "\n",
     "- p Represents the probability of an event. This corresponds to our different hypotheses for the possible probabilities for our black box.\n",
     "- α Represents how many times we observe an event we care about, such as getting two quarters from the box.\n",
-    "- β Represents how many times the event we care about didn’t happen. For our example, this is the number of times that the black box ate the quarter.\n"
+    "- β Represents how many times the event we care about didn’t happen. For our example, this is the number of times that the black box ate the quarter.\n",
+    "\n",
+    "#### The total number of trials is α + β. This is different than the binomial distribution, where we have k observations we’re interested in and a finite number of n total trials.\n"
    ]
   },
   {
