--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Binomal-Dist.ipynb
@@ -50,7 +50,7 @@
     "\n",
     "  #### We read this expression as “n choose k.” So, for our example, we would represent “in three tosses choose two heads” as:\n",
     "\n",
-    "  #### ( 3  2 )"
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/binomial-pmf.jpg)"
    ]
   },
   {
