added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -54,7 +54,15 @@
     "- α Represents how many times we observe an event we care about, such as getting two quarters from the box.\n",
     "- β Represents how many times the event we care about didn’t happen. For our example, this is the number of times that the black box ate the quarter.\n",
     "\n",
-    "#### The total number of trials is α + β. This is different than the binomial distribution, where we have k observations we’re interested in and a finite number of n total trials.\n"
+    "#### The total number of trials is α + β. This is different than the binomial distribution, where we have k observations we’re interested in and a finite number of n total trials.\n",
+    "\n",
+    "#### What we get in the end is a function that describes the probability of each possible hypothesis for our true belief in the probability of getting two coins from the box, given that we have observed α examples of one outcome and β examples of another. Remember that we arrived at the beta distribution by comparing how well different binomial distributions, each with its own probability p, described our data. In other words, the beta distribution represents how well all possible binomial distributions describe the data observed.\n",
+    "\n",
+    "#### The beta distribution is fundamentally different from the binomial distribution in that with the latter, we are looking at the distribution of k, the number of outcomes we care about, which is always something we can count. For the beta distribution, however, we are looking at the distribution of p, for which we have an infinite number of possible values. This leads to an interesting problem that might be familiar if you’ve studied calculus before (but it’s okay if you haven’t!). For our example of α=14 and β=27, we want to know: what is the probability that the chance of getting two coins is 1/2?\n",
+    "\n",
+    "#### While it’s easy to ask the likelihood of an exact value with the binomial distribution thanks to its finite number of outcomes, this is a really tricky question for a continuous distribution. We know that the fundamental rule of probability is that the sum of all our values must be 1, but each of our individual values is infinitely small, meaning the probability of any specific value is in practice 0.\n",
+    "\n",
+    "\n"
    ]
   },
   {
