added new models

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -68,6 +68,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integral result: 0.9807613458579001\n",
+      "Estimate of the absolute error: 2.7539015981024157e-12\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "import scipy.integrate as integrate\n",
+    "\n",
+    "def beta_pdf(p):\n",
+    "  return stats.beta.pdf(p,14,27)\n",
+    "\n",
+    "result, error = integrate.quad(beta_pdf, 0, 0.5)\n",
+    "print(\"Integral result:\", result)\n",
+    "print(\"Estimate of the absolute error:\", error)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
