added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -94,6 +94,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Integral result: 0.2850559397961514\n",
+      "Estimate of the absolute error: 2.3196680874694366e-09\n"
+     ]
+    }
+   ],
+   "source": [
+    "def beta_pdf(p):\n",
+    "  return stats.beta.pdf(p, 5, 1195)\n",
+    "\n",
+    "result, error = integrate.quad(beta_pdf, 0.005, 1)\n",
+    "print(\"Integral result:\", result)\n",
+    "print(\"Estimate of the absolute error:\", error)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
