added new models

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -116,6 +116,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1\n",
+    "\n",
+    "#### You want to use the beta distribution to determine whether or not a coin you have is a fair coin—meaning that the coin gives you heads and tails equally. You flip the coin 10 times and get 4 heads and 6 tails. Using the beta distribution, what is the probability that the coin will land on heads more than 60 percent of the time?\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
