added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -151,6 +151,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "\n",
+    "#### You flip the coin 10 more times and now have 9 heads and 11 tails total. What is the probability that the coin is fair, using our definition of fair, give or take 5 percent?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the coin is fair (p between 0.45 and 0.55) is: 0.3276\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha = 5 + 5\n",
+    "beta = 7 +5\n",
+    "\n",
+    "beta_dist = stats.beta(alpha, beta)\n",
+    "prob_fair = beta_dist.cdf(0.55) - beta_dist.cdf(0.45)\n",
+    "print(f\"The probability that the coin is fair (p between 0.45 and 0.55) is: {prob_fair:.4f}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
