added new models

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Beta-Distribution.ipynb
@@ -182,11 +182,35 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Exercise 3:\n",
+    "#### Data is the best way to become more confident in your assertions. You flip the coin 200 more times and end up with 109 heads and 111 tails. Now what is the probability that the coin is fair, give or take 5 percent?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the coin is fair (p between 0.45 and 0.55) is: 0.8589\n"
+     ]
+    }
+   ],
+   "source": [
+    "alpha= 109\n",
+    "beta = 111\n",
+    "\n",
+    "beta_dist = stats.beta(alpha, beta)\n",
+    "\n",
+    "prob_fair = beta_dist.cdf(0.55) - beta_dist.cdf(0.45)\n",
+    "print(f\"The probability that the coin is fair (p between 0.45 and 0.55) is: {prob_fair:.4f}\")"
+   ]
   }
  ],
  "metadata": {
