added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
@@ -8,10 +8,24 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "#### We can generalize this solution to rewrite our product rule as follows:\n",
+    "\n",
+    "- P(A,B) = P(A) × P(B | A)\n",
+    "\n",
+    "#### This definition works for independent probabilities as well, because for independent probabilities P(B) = P(B | A). This makes intuitive sense when you think about flipping heads and rolling a 6; because P(six) is 1/6 independent of the coin toss, P(six | heads) is also 1/6.\n",
+    "\n",
+    "#### We can also update our definition of the sum rule to account for this fact:\n",
+    "\n",
+    "- P(A or B) = P(A) + P(B) – P(A) × P(B | A)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
