added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
@@ -20,7 +20,8 @@
     "#### We can also update our definition of the sum rule to account for this fact:\n",
     "\n",
     "- P(A or B) = P(A) + P(B) – P(A) × P(B | A)\n",
-    "\n"
+    "\n",
+    "#### An important thing to note about conditional probabilities and dependence is that, in practice, knowing how two events are related is often difficult. For example, we might ask about the probability of someone owning a pickup truck and having a work commute of over an hour. While we can come up with plenty of reasons one might be dependent on the other—maybe people with pickup trucks tend to live in more rural areas and commute less—we might not have the data to support this. Assuming that two events are independent (even when they likely aren’t) is a very common practice in statistics. But, as with our example for picking a color blind male, this assumption can sometimes give us very wrong results. While assuming independence is often a practical necessity, never forget how much of an impact dependence can have."
    ]
   },
   {
