added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
@@ -27,6 +27,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### To understand why Bayes’ theorem is so important, let’s look at a general form of this problem. Our beliefs describe the world we know, so when we observe something, its conditional probability represents the likelihood of what we’ve seen given what we believe, or:\n",
+    "\n",
+    "![Sample Image](/Users/maukanmir/Documents/Machine-Learning/AI-ML-Textbooks/AI-ML-Learning/images/bayes-theorem.jpg)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
