--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
@@ -36,6 +36,21 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### In this chapter, you learned about conditional probabilities, which are any probability of an event that depends on another event. Conditional probabilities are more complicated to work with than independent probabili-ties—we had to update our product rule to account for dependencies—but they lead us to Bayes’ theorem, which is fundamental to understanding how we can use data to update what we believe about the world."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1:\n",
+    "#### What piece of information would we need in order to use Bayes’ theorem to determine the probability that someone in 2010 who had GBS also had the flu vaccine that year?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
