added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
@@ -51,6 +51,22 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### We want to figure out P(flu vaccines | GBS). We can solve this using Bayes’ theorem, provided we have all these pieces of information"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2:\n",
+    "\n",
+    "#### Q2. What is the probability that a random person picked from the population is female and is not color blind?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
