added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Conditional-Prob.ipynb
@@ -79,7 +79,9 @@
     "#### Q3. What is the probability that a male who received the flu vaccine in 2010 is either color blind or has GBS?\n",
     "\n",
     "#### A3. This problem may initially seem complex, but we can simplify it a bit. Let’s start by just working on the probability of being color blind given someone is male, and the probability of having GBS given they’ve received the flu vaccine. Notice that we’re taking a bit of a shortcut, since being male is independent from GBS (as far as we’re concerned here) and having a flu vaccine has no impact on being color blind. We’ll make each of these into a separate probability:\n",
-    "\n"
+    "\n",
+    "- P(A) = P(color blind | male)\n",
+    "- P(B) = P(GBS | Flu Vaccine)"
    ]
   }
  ],
