added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
@@ -24,6 +24,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Let A be the event that your relative lives in the Kansas City metropolitan area.\n",
+    "- Let K be the event that your relative lives in Kansas.\n",
+    "\n",
+    "\n",
+    "- P(K) The probability that a randomly chosen county in either Kansas or Missouri is in Kansas.\n",
+    "- P(A) The probability that a randomly chosen county in either Kansas or Missouri is in the Kansas City metropolitan area.\n",
+    "\n",
+    "- P(A | K): The probability that a county in Kansas is in the Kansas City metropolitan area.\n",
+    "\n",
+    "\n",
+    "#### The total number of counties in Kansas and Missouri combined is 105 +114 = 219\n",
+    "\n",
+    "- P(K) = Number of Counties in Kansas / Total Number of Counties in Kansas and Missouri = 105 /219\n",
+    "- P(A) = Number of Counties in Kansas Metro Area / Total Number of Counties in Kansas = 15 / 219\n",
+    "\n",
+    "- P(A | K) = Number of counties in Kansas that are in the Kansas City Metro / Total nmber of counties in Kansas = 6/105\n",
+    "\n",
+    "- P(Kansas | Kansas City) = (6/105 * 105/219) /   15/19"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
