added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
@@ -44,16 +44,31 @@
     "\n",
     "- P(A | K) = Number of counties in Kansas that are in the Kansas City Metro / Total nmber of counties in Kansas = 6/105\n",
     "\n",
-    "- P(Kansas | Kansas City) = (6/105 * 105/219) /   15/19"
+    "- P(Kansas | Kansas City) = (6/105 * 105/219) /   15/219"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that a relative lives in a county in Kansas given they are in the Kansas City metropolitan area is: 0.4000\n"
+     ]
+    }
+   ],
    "source": [
-    "###"
+    "p_k = 105/219\n",
+    "p_a = 15/219\n",
+    "P_a_given_k = 6/105\n",
+    "\n",
+    "P_K_given_A = (P_a_given_k * p_k) / p_a\n",
+    "\n",
+    "\n",
+    "print(f\"The probability that a relative lives in a county in Kansas given they are in the Kansas City metropolitan area is: {P_K_given_A:.4f}\")"
    ]
   }
  ],
@@ -64,7 +79,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
