added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
@@ -70,6 +70,19 @@
     "\n",
     "print(f\"The probability that a relative lives in a county in Kansas given they are in the Kansas City metropolitan area is: {P_K_given_A:.4f}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2:\n",
+    "#### A deck of cards has 52 cards with suits that are either red or black. There are four aces in a deck of cards: two red and two black. You remove a red ace from the deck and shuffle the cards. Your friend pulls a black card. What is the probability that it is an ace?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
