solved problem question

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
@@ -82,6 +82,16 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- P(A) The probability of picking an Ace = 3/51\n",
+    "- P(B) The probability of pickig a black card = 26/51\n",
+    "- P(A N B) The probability picking a card that is black and an Ace = 2/51\n",
+    "- P(A | B) = P(A N B) / P(B) = 2/51 / 26/51"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
