added new answer

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayes-Theorem.ipynb
@@ -90,9 +90,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability of drawing an Ace given that the card is Black is: 0.0769\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "P_A = 3/51\n",
+    "P_B = 26/51\n",
+    "P_A_and_B = 2/51\n",
+    "\n",
+    "P_A_given_B = P_A_and_B / P_B\n",
+    "\n",
+    "print(f\"The probability of drawing an Ace given that the card is Black is: {P_A_given_B:.4f}\")"
+   ]
   }
  ],
  "metadata": {
