added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
@@ -39,7 +39,9 @@
     "## Solving for the Likelihood\n",
     "#### First, we need to solve for the likelihood, which in this case is the probability that the same evidence would have been observed if you were in fact robbed—in other words, how closely the evidence lines up with the hypothesis:\n",
     "\n",
-    "- P(broken window, open front door, missing laptop | robbed)"
+    "- P(broken window, open front door, missing laptop | robbed)\n",
+    "\n",
+    "#### What we’re asking is, “If you were robbed, how likely is it that you would see the evidence you saw here?” "
    ]
   },
   {
