added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
@@ -47,6 +47,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Calculating the Prior\n",
+    "#### Next, we need to determine the probability that you would get robbed at all. This is our prior. Priors are extremely important, because they allow us to use background information to adjust a likelihood. For example, suppose the scene described earlier happened on a deserted island where you are the only inhabitant. In this case, it would be nearly impossible for you to get robbed (by a human, at least). In another example, if you owned a home in a neighborhood with a high crime rate, robberies might be a frequent occurrence."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
