added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
@@ -55,6 +55,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Normalizing the Data\n",
+    "\n",
+    "#### What’s missing from our equation is the probability of the data you observed whether or not you were robbed. In our example, this is the probability that you observe that your window is broken, the door is open, and your laptop is missing all at once, regardless of the cause."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
