added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Posterior-Prior.ipynb
@@ -65,7 +65,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### As the probability of our data decreases, our posterior probability increases. This is because as the data we observe becomes increasingly unlikely, a typically unlikely explanation does a better job of explaining the event"
+    "#### As the probability of our data decreases, our posterior probability increases. This is because as the data we observe becomes increasingly unlikely, a typically unlikely explanation does a better job of explaining the event\n",
+    "#### Consider this extreme example: the only way your friend could become a millionaire is if they won the lottery or inherited money from some family member they didn’t know existed. Your friend becoming a millionaire is therefore shockingly unlikely. However, you find out that your friend did become a millionaire. The possibility that your friend won the lottery then becomes much more likely, because it is one of the only two ways they could have become a millionaire."
    ]
   },
   {
