added new ntoes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
@@ -8,6 +8,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### The formula for the posterior is actually very simple and intuitive. Given that we have only a likelihood and a prior, we can use the proportional form of Bayes’ theorem that we discussed in the previous chapter:\n",
+    "\n",
+    "- Posterior ∝ Likelihood × Prior\n",
+    "\n",
+    "#### Remember, using this proportional form of Bayes’ theorem means that our posterior distribution doesn’t necessarily sum to 1. But we’re lucky because there’s an easy way to combine beta distributions that will give us a normalized posterior when all we have is the likelihood and the prior."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
