added new notes

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
@@ -19,6 +19,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1:\n",
+    "\n",
+    "#### A friend finds a coin on the ground, flips it, and gets six heads in a row and then one tails. Give the beta distribution that describes this. Use integration to determine the probability that the true rate of flipping heads is between 0.4 and 0.6, reflecting that the coin is reasonably fair.\n",
+    "\n",
+    "- Beta(1, 1) for the prior sice we don't have any information to go off of.\n",
+    "- Posterior = Beta(alpha-prior + heads, Beta-prior + tails)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
