solved new problem

--- a/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
+++ b/Mathematics/Statistics/Bayesian-Stats-Fun/Bayesian-Prior.ipynb
@@ -32,6 +32,40 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probability that the true rate of flipping heads is between 0.4 and 0.6 is approximately 0.0426\n"
+     ]
+    }
+   ],
+   "source": [
+    "import scipy.stats as stats\n",
+    "\n",
+    "alpha, beta = 6, 1\n",
+    "\n",
+    "dist = stats.beta(alpha, beta)\n",
+    "\n",
+    "p_low, p_high = 0.4, 0.6\n",
+    "prob = dist.cdf(p_high) - dist.cdf(p_low)\n",
+    "\n",
+    "print(f\"The probability that the true rate of flipping heads is between 0.4 and 0.6 is approximately {prob:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 2\n",
+    "#### Come up with a prior probability that the coin is fair. Use a beta distribution such that there is at least a 95 percent chance that the true rate of flipping heads is between 0.4 and 0.6."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -45,7 +79,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.19"
   }
  },
